pictures added + notes on ryans  sketches

--- a/about.html
+++ b/about.html
@@ -12,6 +12,27 @@ homicide: when one human being causes the death of another
 mechanism of homicide: the means by which a homicide is committed
 <br>
 </p>
+<img src="pictures/maia_1.jpeg" alt="maia main" width = "400" height = "auto">
+<img src="pictures/maia_2.jpeg" alt="maia mini" width = "400" height = "auto">
+<img src="pictures/ryan_1.jpeg" alt="ryan main" width = "400" height = "auto">
+<p>
+1.  UNDERSTANDABILITY: Hard to know what colors would mean. Definitely need a key to show what color represents what mechanism. Might not be that interesting because for most states, the most popular mechanism was a gun. The fact that the data differs by location, though, is understandable due to the map. The data is all pretty visible and consistent.
+2. ACHIEVABILITY: Plotly allows you to show your data on a map of the US so this Is achievable.
+3. SIGNIFIERS: not many signifiers showing if you can click anything. Perhaps add outlines to the states to show they are highlightable and clickable or hyperlinks in a description
+4. MAPPINGS: this was pretty successful in this example. Quite literally mapping mechanism based on location.
+5. PERCEPTIBILITY: This infographic isn’t perceptible to a blind user. Perhaps include a paragraph with descriptions to use text to speech. In addition, the use of different colors may be hard to understand by a colorblind user. Instead, maybe color the map with different shades of the same color
+</p>
+<img src="pictures/ryan_2.jpeg" alt="ryan mini" width = "400" height = "auto">
+<p>
+  1. UNDERSTANDABILITY: The use of both a colored map and a table seem really beneficial here. The map contextualizes the violent deaths in this location. It is hard to understand, though, what this color may represent so a key would be useful. The table gives more data, allowing for a more interesting infographic than just a colored in state. All data is visible and you don’t need to click anything to access important info. The colors here are not consistent with the colors on the landing page. It might make more sense to use the same colors. The page is simplistic and allows for readability.
+2. ACHIEVABILITY: Plotly allows you to depict data in states and HTML allows you to make a table
+3. SIGNIFIERS: there are no buttons on this sketch so the user doesn’t know if anything is clickable or how to interact with the page
+4. MAPPINGS: Here we are mapping the data about homicides to the map and the table. Both are clear, especially since the table is labeled. It might be beneficial to include a key to indicate what the color of the state maps to data-wise.
+5. PERCEPTIBILITY: This layout is very perceptible. There is only one color so it will be understandable by the colorblind and the table clearly labels all its data. The only issue that may arise with a table is that if it gets filled with too much data, it can be overwhelming. This should not be an issue for this example, though, as there will be less than ten rows (because we only have data for less than ten mechanisms)
+</p>
+
+
+
 
 </body>
 
