--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <li>UNDERSTANDABILITY: This map is very understandable. It is clear that a darker color means a higher percentage of violent deaths in that location. The key adds to this understandability. The map doesn’t show, though, anything about the
       mechanism used. This is only found in the individual state section. I think this is okay, though, because it helps not overwhelm the reader. In addition, the summery at the top will clear up any confusion.
     </li>
-    <li>ACHIEVABILITY: Plotly allows you to show your data on a map of the US so this Is achievable.
+    <li>ACHIEVABILITY: Plotly allows you to show your data on a map of the US so this is achievable.
     </li>
     <li>SIGNIFIERS: The about button in the top right and the bar with a list of micro summery states make it clear that you can click these sections for other pages. It is not clear, though, whether you can click the states themselves. It will be
       necessary to add a signifier there.
@@ -60,7 +60,7 @@
     <li>UNDERSTANDABILITY: Hard to know what colors would mean. Definitely need a key to show what color represents what mechanism. Might not be that interesting because for most states, the most popular mechanism was a gun. The fact that the data
       differs by location, though, is understandable due to the map. The data is all pretty visible and consistent.
     </li>
-    <li>ACHIEVABILITY: Plotly allows you to show your data on a map of the US so this Is achievable.
+    <li>ACHIEVABILITY: Plotly allows you to show your data on a map of the US so this is achievable.
     </li>
     <li>SIGNIFIERS: not many signifiers showing if you can click anything. Perhaps add outlines to the states to show they are highlightable and clickable or hyperlinks in a description
     </li>
@@ -119,11 +119,20 @@
     </li>
     <li> The paragraphs/titles from Maia's sketch because they make the page more understandable.
     </li>
-  </ol>  
-
-
-
+  </ol>
       </p>
+
+      <br>
+      <h3> Project Pipeline </h3>
+    <p>
+      <h4> Division of Labor </h4>
+      <ol>
+        <li>
+        Seeing as the project can be divided into three main parts: the macropage, the micropages, and the navbar, we currently believe an ideal way to distribute our work on these components is if Ryan focuses on the macropage, Maia focuses on the micropages, and together we collaborate on the navbar
+        </li>
+      </ol>
+    </p>
+
 </body>
 
 </html>
