--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
       <h4> Division of Labor </h4>
       <ol>
         <li>
-        Seeing as the project can be divided into three main parts: the macropage, the micropages, and the navbar, we currently believe an ideal way to distribute our work on these components is if Ryan focuses on the macropage, Maia focuses on the micropages, and together we collaborate on the navbar
+        Seeing as the project can be divided into three main parts: the macropage, the micropages, and the navbar, we currently believe an ideal way to distribute our work on these components is if Ryan focuses on the macropage, Maia focuses on the micropages, and together we collaborate on the navbar.
         </li>
       </ol>
     </p>
